--- a/KBO Inventory Update/_Imports.razor
+++ b/KBO Inventory Update/_Imports.razor
@@ -8,4 +8,6 @@
 @using Microsoft.JSInterop
 @using KBO_Inventory_Update
 @using KBO_Inventory_Update.Shared
-@using IgniteUI.Blazor.Controls;
+@using IgniteUI.Blazor.Controls
+@using BlazorInputFileExtended
+@using Tewr.Blazor.FileReader
