--- a/KBO Inventory Update/Pages/ResultsDashboard.razor
+++ b/KBO Inventory Update/Pages/ResultsDashboard.razor
@@ -89,8 +89,8 @@
 
 @code {
     private Northwind.EmployeesType[] northwindEmployees = Array.Empty<Northwind.EmployeesType>();
-    private InventoryDashData.Table1Type[] inventoryDashDataTable1 = Array.Empty<InventoryDashData.Table1Type>();
-    private SpecialDashData.Table1Type[] specialDashDataTable1 = Array.Empty<SpecialDashData.Table1Type>();
+    private InventoryDashData.ResultInvType[] inventoryDashDataTable1 = Array.Empty<InventoryDashData.ResultInvType>();
+    private SpecialDashData.ResultSpecType[] specialDashDataTable1 = Array.Empty<SpecialDashData.ResultSpecType>();
     private Financial.BoxOfficeRevenueType[] financialBoxOfficeRevenue = Array.Empty<Financial.BoxOfficeRevenueType>();
 
     protected override async Task OnInitializedAsync()
